[gd_scene load_steps=17 format=2]

[ext_resource path="res://CreatureEditor/EditorGUI.gd" type="Script" id=1]
[ext_resource path="res://CreatureEditor/PartsPanel.gd" type="Script" id=2]
[ext_resource path="res://CreatureEditor/StatsPanel.gd" type="Script" id=3]
[ext_resource path="res://CreatureEditor/FinalizeContainer.gd" type="Script" id=4]
[ext_resource path="res://CreatureEditor/style.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/checkmark.png" type="Texture" id=6]
[ext_resource path="res://Assets/cross.png" type="Texture" id=7]
[ext_resource path="res://CreatureEditor/ButtonStyle.tres" type="StyleBox" id=8]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.686275, 0.623529, 0.792157, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.439216, 0.321569, 0.639216, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 5
shadow_offset = Vector2( 0, 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.494118, 0.439216, 0.588235, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.376471, 0.278431, 0.545098, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.686275, 0.623529, 0.792157, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.439216, 0.321569, 0.639216, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 4
shadow_offset = Vector2( 0, 3 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.686275, 0.623529, 0.792157, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.439216, 0.321569, 0.639216, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 3
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.686275, 0.623529, 0.792157, 1 )
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 40.0
content_margin_right = 40.0
bg_color = Color( 0.494359, 0.437775, 0.589844, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.419331, 0.376831, 0.492188, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
expand_margin_left = 12.0
expand_margin_right = 12.0
expand_margin_top = 1.0

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 50.0
content_margin_right = 50.0
bg_color = Color( 0.686275, 0.623529, 0.792157, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.545098, 0.447059, 0.705882, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
expand_margin_left = 12.0
expand_margin_right = 12.0

[sub_resource type="Theme" id=2]
Button/styles/hover = SubResource( 6 )
Button/styles/normal = ExtResource( 8 )
Button/styles/pressed = SubResource( 7 )
LineEdit/colors/font_color = Color( 0.278431, 0.129412, 0.4, 1 )
LineEdit/styles/focus = SubResource( 8 )
LineEdit/styles/normal = SubResource( 9 )
Panel/styles/panel = ExtResource( 5 )
TabContainer/colors/font_color_bg = Color( 0.188913, 0.0564575, 0.289063, 1 )
TabContainer/colors/font_color_fg = Color( 0.270588, 0.109804, 0.392157, 1 )
TabContainer/styles/panel = SubResource( 3 )
TabContainer/styles/tab_bg = SubResource( 4 )
TabContainer/styles/tab_fg = SubResource( 5 )

[node name="EditorGUI" type="Control"]
margin_right = 1024.0
margin_bottom = 601.0
theme = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenDivide1" type="MarginContainer" parent="."]
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = 350.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PartsPanel" type="Panel" parent="ScreenDivide1"]
margin_right = 340.0
margin_bottom = 581.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="ScreenDivide1/PartsPanel"]
margin_left = 6.0
margin_top = 5.0
margin_right = 335.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cosmetic" type="VBoxContainer" parent="ScreenDivide1/PartsPanel/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="CTitle1" type="Label" parent="ScreenDivide1/PartsPanel/TabContainer/Cosmetic"]
modulate = Color( 0.27451, 0.121569, 0.392157, 1 )
margin_right = 329.0
margin_bottom = 14.0
text = "Creature Parts"

[node name="ScrollContainer1" type="ScrollContainer" parent="ScreenDivide1/PartsPanel/TabContainer/Cosmetic"]
margin_top = 18.0
margin_right = 329.0
margin_bottom = 179.0
size_flags_vertical = 3

[node name="CPartGrid" type="GridContainer" parent="ScreenDivide1/PartsPanel/TabContainer/Cosmetic/ScrollContainer1"]
margin_right = 329.0
margin_bottom = 161.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CTitle2" type="Label" parent="ScreenDivide1/PartsPanel/TabContainer/Cosmetic"]
modulate = Color( 0.27451, 0.121569, 0.392157, 1 )
margin_top = 183.0
margin_right = 329.0
margin_bottom = 197.0
text = "Color"

[node name="ScrollContainer2" type="ScrollContainer" parent="ScreenDivide1/PartsPanel/TabContainer/Cosmetic"]
margin_top = 201.0
margin_right = 329.0
margin_bottom = 363.0
size_flags_vertical = 3

[node name="ColorGrid" type="GridContainer" parent="ScreenDivide1/PartsPanel/TabContainer/Cosmetic/ScrollContainer2"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CTitle3" type="Label" parent="ScreenDivide1/PartsPanel/TabContainer/Cosmetic"]
modulate = Color( 0.27451, 0.121569, 0.392157, 1 )
margin_top = 367.0
margin_right = 329.0
margin_bottom = 381.0
text = "Pattern"

[node name="ScrollContainer3" type="ScrollContainer" parent="ScreenDivide1/PartsPanel/TabContainer/Cosmetic"]
margin_top = 385.0
margin_right = 329.0
margin_bottom = 547.0
size_flags_vertical = 3

[node name="PatternGrid" type="GridContainer" parent="ScreenDivide1/PartsPanel/TabContainer/Cosmetic/ScrollContainer3"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Functional" type="VBoxContainer" parent="ScreenDivide1/PartsPanel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0

[node name="FTitle1" type="Label" parent="ScreenDivide1/PartsPanel/TabContainer/Functional"]
modulate = Color( 0.27451, 0.121569, 0.392157, 1 )
margin_right = 329.0
margin_bottom = 14.0
text = "Creature Parts"

[node name="ScrollContainer1" type="ScrollContainer" parent="ScreenDivide1/PartsPanel/TabContainer/Functional"]
margin_top = 18.0
margin_right = 329.0
margin_bottom = 179.0
size_flags_vertical = 3

[node name="FPartGrid" type="GridContainer" parent="ScreenDivide1/PartsPanel/TabContainer/Functional/ScrollContainer1"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FTitle2" type="Label" parent="ScreenDivide1/PartsPanel/TabContainer/Functional"]
modulate = Color( 0.27451, 0.121569, 0.392157, 1 )
margin_top = 183.0
margin_right = 329.0
margin_bottom = 197.0
text = "Body Segments"

[node name="ScrollContainer2" type="ScrollContainer" parent="ScreenDivide1/PartsPanel/TabContainer/Functional"]
margin_top = 201.0
margin_right = 329.0
margin_bottom = 363.0
size_flags_vertical = 3

[node name="BodyGrid" type="GridContainer" parent="ScreenDivide1/PartsPanel/TabContainer/Functional/ScrollContainer2"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FTitle3" type="Label" parent="ScreenDivide1/PartsPanel/TabContainer/Functional"]
modulate = Color( 0.27451, 0.121569, 0.392157, 1 )
margin_top = 367.0
margin_right = 329.0
margin_bottom = 381.0
text = "Limbs"

[node name="ScrollContainer3" type="ScrollContainer" parent="ScreenDivide1/PartsPanel/TabContainer/Functional"]
margin_top = 385.0
margin_right = 329.0
margin_bottom = 547.0
size_flags_vertical = 3

[node name="LimbGrid" type="GridContainer" parent="ScreenDivide1/PartsPanel/TabContainer/Functional/ScrollContainer3"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenDivide2" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 355.0
margin_top = -65.0
margin_right = 670.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalizeContainer" type="HBoxContainer" parent="ScreenDivide2"]
margin_right = 315.0
margin_bottom = 56.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="ScreenDivide2/FinalizeContainer"]
margin_right = 56.0
margin_bottom = 56.0
icon = ExtResource( 7 )

[node name="NameInput" type="LineEdit" parent="ScreenDivide2/FinalizeContainer"]
margin_left = 60.0
margin_right = 255.0
margin_bottom = 56.0
size_flags_horizontal = 3
align = 1
max_length = 30
placeholder_text = "Enter a Name"

[node name="ConfirmButtion" type="Button" parent="ScreenDivide2/FinalizeContainer"]
margin_left = 259.0
margin_right = 315.0
margin_bottom = 56.0
icon = ExtResource( 6 )

[node name="ScreenDivide3" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -350.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsPanel" type="Panel" parent="ScreenDivide3"]
margin_right = 340.0
margin_bottom = 581.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenDivide3/StatsPanel"]
modulate = Color( 0.27451, 0.121569, 0.392157, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ScreenDivide3/StatsPanel/VBoxContainer"]
margin_right = 320.0
margin_bottom = 14.0
text = "Creature Statistics"

[node name="RichTextLabel" type="RichTextLabel" parent="ScreenDivide3/StatsPanel/VBoxContainer"]
margin_top = 18.0
margin_right = 320.0
margin_bottom = 18.0

[connection signal="pressed" from="ScreenDivide2/FinalizeContainer/CancelButton" to="ScreenDivide2/FinalizeContainer" method="_on_CancelButton_pressed"]
[connection signal="pressed" from="ScreenDivide2/FinalizeContainer/ConfirmButtion" to="ScreenDivide2/FinalizeContainer" method="_on_ConfirmButtion_pressed"]
